--- a/src/main/webapp/css/styleQ4.css
+++ b/src/main/webapp/css/styleQ4.css
@@ -19,9 +19,9 @@ html, body {
 
 header {
 	width: 100%;
-	height: 100vh;
+	height: 80vh;
 	padding: 40px 2%;
-	min-height: 800px;
+	min-height: 650px;
 	background-image: url('../imagens/capa.png');
 	background-size: cover;
 	background-position: center;
@@ -80,4 +80,23 @@ header nav.chamada1 h2 {
 header nav.chamada1 p {
 	color: white;
 	font-size: 30px;	
+}
+
+#section-dados-pessoais{
+	width: 100%;
+	height: 500px;
+	background-color: #699bea;
+	text-align: center;
+	padding: 20px 0;
+}
+
+#section-dados-pessoais img{
+	margin-top: 100px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;   
+}
+
+#section-dados-pessoais h1{
+	padding: 20px 0;
 }
