--- a/src/main/webapp/css/styleQ4.css
+++ b/src/main/webapp/css/styleQ4.css
@@ -8,11 +8,6 @@ html, body {
 	height: 100%;
 }
 
-.container {
-	max-width: 1280px;
-	margin: 0 auto;
-}
-
 .clear{
 	clear: both;
 }
@@ -84,14 +79,14 @@ header nav.chamada1 p {
 
 #section-dados-pessoais{
 	width: 100%;
-	height: 500px;
+	height: 650px;
 	background-color: #699bea;
 	text-align: center;
 	padding: 20px 0;
 }
 
 #section-dados-pessoais img{
-	margin-top: 100px;
+	margin-top: 150px;
     width: 200px;
     height: 200px;
     border-radius: 100px;   
@@ -99,4 +94,91 @@ header nav.chamada1 p {
 
 #section-dados-pessoais h1{
 	padding: 20px 0;
+}
+
+#formacao{
+	width: 100%;
+    height: 650px;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #d7dde5;
+}
+
+#formacao h1{
+	margin-top: 110px;
+	margin-bottom: 50px;
+	font-size: 40px;
+}
+
+#formacao .elemento{
+    padding: 10px 0;
+    border-bottom: 2px solid rgb(200, 200, 200);
+}
+
+#formacao .descricao{
+	margin-left: 250px;
+	width: 30%;
+	height: 200px;
+    float: left;
+}
+
+#formacao .img-instituicao{
+	margin-right: 250px;
+	float: right;
+	width: 30%;
+	height: 200px;
+}
+
+#formacao h2{
+	padding-top: 60px;
+}
+
+#formacao img{
+    width: 200px;
+    height: 200px;
+}
+
+#conhecimentos{
+	width: 100%;
+    height: 650px;
+    text-align: center;
+    padding: 20px 0;
+    background-color: #0b2559;
+}
+
+#conhecimentos h1{
+	color: white;
+    margin-top: 110px;
+    margin-bottom: 100px;
+    font-size: 40px;
+}
+
+#conhecimentos img{
+	width: 200px;
+    height: 200px;
+}
+
+#contato{
+	width: 100%;
+    height: 650px;
+    text-align: center;
+    padding: 20px 0;
+    color: white;
+    background-color: #323335;
+    border: none;
+}
+
+
+#contato .form-contato{
+	padding-top: 80px;
+	width: 60%;
+	height: 100%;
+	float: left;
+}
+
+#contato .redes-sociais{
+	padding-top: 80px;
+	width: 40%;
+	height: 100%;
+	float: right;
 }
