--- a/src/main/webapp/css/styleQ6.css
+++ b/src/main/webapp/css/styleQ6.css
@@ -8,61 +8,12 @@ html, body {
     height: 100%;
 }
 
-.container{
-	width: 100%;
-	position: relative;
+.form-login{
+	margin: 0 auto;
+	width: 50%;
 }
 
-.form{
-	left: 460px;
-	position: absolute;
+.form-login h1{
+	margin-top: 50px;
 	text-align: center;
-    width: 399px;
-    height: 619px;
-    background-color: white;
-    color: #999999;
-    border: 10px solid #CCCCCC;
-    }
-
-.form h2{
-    margin-top: 15px;
-    padding: 15px;
-    font-size: 30px;
-    color: black;
-    font-weight: 100;
 }
-
-.form-conjunto{
-    padding: 10px;
-    font-size: 15px;
-    margin-bottom: 15px;
-}
-
-.form-conjunto p{
-    float: left;
-}
-
-.form-conjunto input[type=text]{
-    padding: 15px;
-    margin-top: 10px;
-    width: 100%;
-    outline: 0;
-}
-
-.form > p{
-    padding: 10px;
-    margin-top: 20px;
-}
-
-.form .btn-submit{
-    background-color: #363A6D;
-    width: 280px;
-    height: 56px;
-    text-align: center;
-    color: white;
-    margin: 0 auto;
-    padding: 20px 0;
-    margin-top: 20px;
-    cursor: pointer;
-}
-
