--- a/src/main/webapp/css/styleQ4.css
+++ b/src/main/webapp/css/styleQ4.css
@@ -8,7 +8,7 @@ html, body {
 	height: 100%;
 }
 
-.clear{
+.clear {
 	clear: both;
 }
 
@@ -33,7 +33,8 @@ header .logo {
 	float: left;
 	width: 160px;
 	height: 40px;
-	background-color: rgb(200, 200, 200); background-size : contain;
+	background-color: rgb(200, 200, 200);
+	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -49,10 +50,9 @@ header nav.list-header ul>li {
 	padding: 5px 10px;
 }
 
-header nav.list-header ul>li:hover{
+header nav.list-header ul>li:hover {
 	background-color: rgba(100, 100, 100, 0.5);
 	border-radius: 10px;
-	
 }
 
 header nav.list-header ul>li>a {
@@ -74,10 +74,10 @@ header nav.chamada1 h2 {
 
 header nav.chamada1 p {
 	color: white;
-	font-size: 30px;	
+	font-size: 30px;
 }
 
-#section-dados-pessoais{
+#section-dados-pessoais {
 	width: 100%;
 	height: 650px;
 	background-color: #699bea;
@@ -85,100 +85,144 @@ header nav.chamada1 p {
 	padding: 20px 0;
 }
 
-#section-dados-pessoais img{
+#section-dados-pessoais img {
 	margin-top: 150px;
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;   
+	width: 200px;
+	height: 200px;
+	border-radius: 100px;
 }
 
-#section-dados-pessoais h1{
+#section-dados-pessoais h1 {
 	padding: 20px 0;
 }
 
-#formacao{
+#formacao {
 	width: 100%;
-    height: 650px;
-    text-align: center;
-    padding: 20px 0;
-    background-color: #d7dde5;
+	height: 650px;
+	text-align: center;
+	padding: 20px 0;
+	background-color: #d7dde5;
 }
 
-#formacao h1{
+#formacao h1 {
 	margin-top: 110px;
 	margin-bottom: 50px;
 	font-size: 40px;
 }
 
-#formacao .elemento{
-    padding: 10px 0;
-    border-bottom: 2px solid rgb(200, 200, 200);
+#formacao .elemento {
+	padding: 10px 0;
+	border-bottom: 2px solid rgb(200, 200, 200);
 }
 
-#formacao .descricao{
+#formacao .descricao {
 	margin-left: 250px;
 	width: 30%;
 	height: 200px;
-    float: left;
+	float: left;
 }
 
-#formacao .img-instituicao{
+#formacao .img-instituicao {
 	margin-right: 250px;
 	float: right;
 	width: 30%;
 	height: 200px;
 }
 
-#formacao h2{
+#formacao h2 {
 	padding-top: 60px;
 }
 
-#formacao img{
-    width: 200px;
-    height: 200px;
-}
-
-#conhecimentos{
-	width: 100%;
-    height: 650px;
-    text-align: center;
-    padding: 20px 0;
-    background-color: #0b2559;
-}
-
-#conhecimentos h1{
-	color: white;
-    margin-top: 110px;
-    margin-bottom: 100px;
-    font-size: 40px;
-}
-
-#conhecimentos img{
+#formacao img {
 	width: 200px;
-    height: 200px;
+	height: 200px;
 }
 
-#contato{
+#conhecimentos {
 	width: 100%;
-    height: 650px;
-    text-align: center;
-    padding: 20px 0;
-    color: white;
-    background-color: #323335;
-    border: none;
+	height: 650px;
+	text-align: center;
+	padding: 20px 0;
+	background-color: #0b2559;
 }
 
+#conhecimentos h1 {
+	color: white; margin-top : 110px;
+	margin-bottom: 100px;
+	font-size: 40px;
+	margin-top: 110px;
+}
 
-#contato .form-contato{
+#conhecimentos img {
+	width: 200px;
+	height: 200px;
+}
+
+#contato {
+	width: 100%;
+	height: 650px;
+	text-align: center;
+	padding: 20px 0;
+	color: white;
+	background-color: #323335;
+	border: none;
+}
+
+#contato .form-contato {
 	padding-top: 80px;
-	width: 60%;
-	height: 100%;
+}
+
+#contato .redes-sociais {
+	padding-top: 180px;
+}
+
+.list-redes-sociais ul {
+	
+}
+
+.list-redes-sociais ul li {
+	list-style: none;
+	text-align: left;
+	padding-bottom: 5px;
+}
+
+.list-redes-sociais ul li span {
+	padding-left: 10px;
+}
+
+.list-redes-sociais .icons li{
 	float: left;
+	padding-right: 10px;
+	
 }
 
-#contato .redes-sociais{
-	padding-top: 80px;
-	width: 40%;
-	height: 100%;
+.list-redes-sociais .icons li:first-child{
+	padding-left: 20px;
+}
+
+
+.list-redes-sociais .icons li a > img {
+    width: 15%;
+    height: 15%;
+    cursor: pointer;
+}
+
+footer{
+    width: 100%;
+    height: 80px;
+    background-color: white;
+    padding: 20px 0;
+    background-color: #d7dde5;
+    font-size: 20px;
+}
+
+footer .footer-nome{
+	float: left;
+	text-align: center;
+}
+
+footer .footer-mensagem{
 	float: right;
+	text-align: center;
+	
 }
