--- a/src/main/webapp/css/styleQ4.css
+++ b/src/main/webapp/css/styleQ4.css
@@ -147,7 +147,8 @@ header nav.chamada1 p {
 }
 
 #conhecimentos h1 {
-	color: white; margin-top : 110px;
+	color: white;
+	margin-top: 110px;
 	margin-bottom: 100px;
 	font-size: 40px;
 	margin-top: 110px;
@@ -190,39 +191,33 @@ header nav.chamada1 p {
 	padding-left: 10px;
 }
 
-.list-redes-sociais .icons li{
+.list-redes-sociais .icons li {
 	float: left;
 	padding-right: 10px;
-	
+	padding-top: 5px;
 }
 
-.list-redes-sociais .icons li:first-child{
-	padding-left: 20px;
+.list-redes-sociais .icons li a>img {
+	width: 15%;
+	height: 15%;
+	cursor: pointer;
 }
 
-
-.list-redes-sociais .icons li a > img {
-    width: 15%;
-    height: 15%;
-    cursor: pointer;
+footer {
+	width: 100%;
+	height: 80px;
+	background-color: white;
+	padding: 20px 0;
+	background-color: #d7dde5;
+	font-size: 20px;
 }
 
-footer{
-    width: 100%;
-    height: 80px;
-    background-color: white;
-    padding: 20px 0;
-    background-color: #d7dde5;
-    font-size: 20px;
-}
-
-footer .footer-nome{
+footer .footer-nome {
 	float: left;
 	text-align: center;
 }
 
-footer .footer-mensagem{
+footer .footer-mensagem {
 	float: right;
 	text-align: center;
-	
 }
